--- a/OrderTakingDDD.fsproj
+++ b/OrderTakingDDD.fsproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="SimpleTypes/Helpers.fs" />
+    <Compile Include="SimpleTypes/Common.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
